objects/Deal_History__c.object
<CustomObject>
    <fields>
        <fullName>Assets_Months_Reserves__c</fullName>
        <label>Assets Months Reserves</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_OAV__c</fullName>
        <label>Estimated OAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FICO__c</fullName>
        <label>FICO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_OAV__c</fullName>
        <label>Final OAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund_Number__c</fullName>
        <label>Fund Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Investor_Percentage__c</fullName>
        <label>Investor Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>Aged</fullName>
                </value>
                <value>
                    <fullName>Applicant does not meet other non-credit related application criteria</fullName>
                </value>
                <value>
                    <fullName>Application Incomplete</fullName>
                </value>
                <value>
                    <fullName>Appraisal value is below customer expectation</fullName>
                </value>
                <value>
                    <fullName>Attorney/financial advisor advised against it</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Collection action or judgment</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer information is fake or cannot be used to contact the customer</fullName>
                </value>
                <value>
                    <fullName>Customer provided appraisal does not meet investor standards</fullName>
                </value>
                <value>
                    <fullName>Delaying Process/Just Researching</fullName>
                </value>
                <value>
                    <fullName>Delinquent past or present obligations with others</fullName>
                </value>
                <value>
                    <fullName>Does not want to use Unison partner lender</fullName>
                </value>
                <value>
                    <fullName>Excessive obligations in relation to income</fullName>
                </value>
                <value>
                    <fullName>Felony</fullName>
                </value>
                <value>
                    <fullName>Garnishment or attachment</fullName>
                </value>
                <value>
                    <fullName>Insufficient equity in the property</fullName>
                </value>
                <value>
                    <fullName>Insufficient savings for purchase price range</fullName>
                </value>
                <value>
                    <fullName>Lender financing fell through or declined customer</fullName>
                </value>
                <value>
                    <fullName>Length of employment</fullName>
                </value>
                <value>
                    <fullName>Length of residence</fullName>
                </value>
                <value>
                    <fullName>No credit file</fullName>
                </value>
                <value>
                    <fullName>No Longer Interested and No Reason Given</fullName>
                </value>
                <value>
                    <fullName>Non-owner occupied property</fullName>
                </value>
                <value>
                    <fullName>Not Buying Home</fullName>
                </value>
                <value>
                    <fullName>Notice of default, foreclosure or repossession</fullName>
                </value>
                <value>
                    <fullName>Not operating in requested state</fullName>
                </value>
                <value>
                    <fullName>Number of recent inquiries on credit bureau report</fullName>
                </value>
                <value>
                    <fullName>Option Contract too confusing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Type__c</fullName>
        <label>Loss Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAD_Amount__c</fullName>
        <label>MAD Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAD_Pct__c</fullName>
        <label>MAD Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Authorized_DTI__c</fullName>
        <label>Maximum Authorized DTI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Authorized_LTV__c</fullName>
        <label>Maximum Authorized LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Cash_to_Homeowner__c</fullName>
        <label>Net Cash to Homeowner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OAV_Discount_Pct__c</fullName>
        <label>OAV Discount Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OIP__c</fullName>
        <label>OIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Histories</relationshipLabel>
        <relationshipName>Deal_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Loss_Reason__c</fullName>
        <label>Other Loss Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKR_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PKR_Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passbook_Status__c</fullName>
        <label>Passbook Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Close_DTI__c</fullName>
        <label>Post Close DTI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Post_Close_LTV__c</fullName>
        <label>Post-Close LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_Close_DTI__c</fullName>
        <label>Pre-Close DTI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_Close_LTV__c</fullName>
        <label>Pre-Close LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricing_Ratio__c</fullName>
        <label>Pricing Ratio</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Current_Conditions__c</referenceTo>
        <relationshipLabel>Deal Histories</relationshipLabel>
        <relationshipName>Deal_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Payment_to_Debts__c</fullName>
        <label>Total Payment to Debts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unison_Transaction_Fee_Amount__c</fullName>
        <label>Unison Transaction Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Deal History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>